--- a/Socket.io - Android_App/app/src/main/res/layout/activefriend.xml
+++ b/Socket.io - Android_App/app/src/main/res/layout/activefriend.xml
@@ -33,7 +33,7 @@
             android:gravity="center_vertical"
             android:text="BIJOY"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textStyle="bold" />
+            android:textStyle="normal" />
 
     </LinearLayout>
 </LinearLayout>
